--- a/styles.css
+++ b/styles.css
@@ -60,3 +60,12 @@ button {
     cursor: pointer;
     border-radius: 40px;
 }
+
+ul li {
+    list-style: none;
+    font-size: 17px;
+    padding: 12px ;
+    user-select: none;
+    cursor: pointer;
+
+}
